Fixes
* Made ic_zip_box_grey compatible with Android API < 21 with PNG, while vector drawables still kept for >= API 21
* Rewrite Extractor tests to test failed scenarios when wrong password is entered for password-protected archives